Update hero html section and style

--- a/index.html
+++ b/index.html
@@ -7,21 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Header Logo</a></li>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </nav>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button>Sign up</button>
-        </div>
-        <img src="#" alt="Placeholder image">
-    </header>
+    <div class="hero">
+        <header>
+            <nav>
+                <div class="container">
+                    <div class="logo">Header Logo</div>
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <section class="hero-text">
+            <div class="container">
+                <div class="hero-sign-up">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <img src="img/Screenshot 2025-03-19 at 10.26.57 PM.png" alt="Placeholder image">
+            </div>
+        </section>
+    </div>
 </body>
 </html>
