Create card section and style it

--- a/index.html
+++ b/index.html
@@ -31,5 +31,26 @@
             </div>
         </section>
     </div>
+    <section class="card-section">
+        <h2>Some random information.</h2>
+        <div class="container">
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration of image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration of image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration of image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration of image</div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
