--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
             </div>
         </div>
     </section>
+    <section class="quote-section">
+        <div class="container">
+            <p>
+                "This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."
+            </p>
+            <span>-Thor, God of Thunder</span>
+        </div>
+    </section>
 </body>
 </html>
