--- a/index.html
+++ b/index.html
@@ -60,5 +60,14 @@
             <span>-Thor, God of Thunder</span>
         </div>
     </section>
+    <section class="call-to-action">
+        <div class="container">
+            <div class="call-text">
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </section>
 </body>
 </html>
