Create footer and style it

--- a/index.html
+++ b/index.html
@@ -69,5 +69,10 @@
             <button>Sign up</button>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <span class="copyright">Copyright &copy; The Odin Project 2021</span>
+        </div>
+    </footer>
 </body>
 </html>
